@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mono.Rocks.Tests\BaseRocksFixture.cs" />
+    <Compile Include="Mono.Rocks.Tests\ICustomAttributeProviderTest.cs" />
     <Compile Include="Mono.Rocks.Tests\StringTest.cs" />
     <Compile Include="Mono.Rocks.Tests\IEnumerableTest.cs" />
     <Compile Include="Mono.Rocks.Tests\Int32Test.cs" />
